--- a/Views/HomePage.cshtml
+++ b/Views/HomePage.cshtml
@@ -4,27 +4,5 @@
 	Layout = "mainLayout.cshtml";
 }
 
+@Html.GetBlockListHtml(Model.Sections);
 
-<section class="relative py-[7rem]">
-
-	<div class="absolute inset-0">
-		@if (@Model.HeroBgImage != null)
-		{
-			<img src="@Model.HeroBgImage.Url()" class="w-full h-full object-cover" />
-		}
-
-	</div>
-
-	<div class="max-w-7xl mx-auto px-4 relative z-10">
-		<div class="w-5/10 flex flex-col gap-8">
-			<h1 class="leading-none">@Model.HeroTitle</h1>
-			<div class="rte">@Html.Raw(Model.HeroText)</div>
-			@if (Model.HeroLink != null)
-			{
-				<a class="primary-btn btn self-start" href="@Model.HeroLink.Url">@Model.HeroLink.Name</a>
-			}
-		</div>
-
-	</div>
-
-</section>
