--- a/wwwroot/css/output.css
+++ b/wwwroot/css/output.css
@@ -14,14 +14,19 @@
     --container-4xl: 56rem;
     --container-6xl: 72rem;
     --container-7xl: 80rem;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-base: 1rem;
+    --text-base--line-height: calc(1.5 / 1);
     --leading-snug: 1.375;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-neutral: #FFFFFF;
     --color-white-100: #F7F7F7;
     --color-primary: #4F5955;
+    --color-main-light: #606966;
     --color-secondary: #D9C3A9;
     --color-btn-primary-background-hover: #9EA6A3;
     --color-btn-primary-text-hover: #F2EDDC;
@@ -286,6 +291,12 @@
   .items-center {
     align-items: center;
   }
+  .justify-between {
+    justify-content: space-between;
+  }
+  .justify-center {
+    justify-content: center;
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -311,11 +322,18 @@
     border-style: var(--tw-border-style);
     border-width: 2px;
   }
+  .border-l {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 1px;
+  }
   .border-\[var\(--clr-white-100\)\] {
     border-color: var(--clr-white-100);
   }
   .border-gray-600 {
     border-color: var(--color-gray-600);
+  }
+  .border-main-light {
+    border-color: var(--color-main-light);
   }
   .border-white-100 {
     border-color: var(--color-white-100);
@@ -329,8 +347,14 @@
   .bg-neutral {
     background-color: var(--color-neutral);
   }
+  .bg-primary {
+    background-color: var(--color-primary);
+  }
   .object-cover {
     object-fit: cover;
+  }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -344,11 +368,17 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
+  }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
   }
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
@@ -368,9 +398,17 @@
   .font-semibold {
     font-family: var(--font-semibold);
   }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
+  }
   .text-sm {
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
   }
   .leading-none {
     --tw-leading: 1;
@@ -378,6 +416,15 @@
   }
   .text-gray-600 {
     color: var(--color-gray-600);
+  }
+  .text-neutral {
+    color: var(--color-neutral);
+  }
+  .last\:border-r {
+    &:last-child {
+      border-right-style: var(--tw-border-style);
+      border-right-width: 1px;
+    }
   }
 }
 html {
