dynamic navigation added

--- a/Views/MainLayout.cshtml
+++ b/Views/MainLayout.cshtml
@@ -42,6 +42,7 @@
 
 <body>
     <partial name="Partials/Layout/_Topbar" />
+    <partial name="Partials/Layout/_Header" />
     @RenderBody()
 </body>
 
