--- a/wwwroot/css/input.css
+++ b/wwwroot/css/input.css
@@ -24,12 +24,7 @@
     --color-btn-secondary-background-color: #F2EDDC;
     /*TYPOGRAPHY */
     --font-family-poppins: 'Poppins', sans-serif;
-    /* Font Weights */
-    --font-regular: 400;
-    --font-medium: 500;
-    --font-semibold: 600;
-    --font-bold: 700;
-    --font-extrabold: 800;
+  
     /* Background */
     --color-main-background-color: #F5F3F3;
     --color-secondary-background-color: #EBEBEB;
@@ -53,37 +48,38 @@ body {
 h1 {
     @apply leading-none text-primary;
     font-size: 4.5rem;
-    font-weight: var(--font-bold);
+    font-weight: 700;
+    
 }
 
 h2 {
     @apply leading-none text-primary;
     font-size: 3rem;
-    font-weight: var(--font-bold);
+    font-weight: 700;
 }
 
 h3 {
     @apply leading-none text-primary;
     font-size: 2.5rem;
-    font-weight: var(--font-bold);
+    font-weight: 700;
 }
 
 h4 {
     @apply leading-none text-primary;
     font-size: 2rem;
-    font-weight: var(--font-semibold);
+    font-weight: 700;
 }
 
 h5 {
     @apply leading-none text-primary;
     font-size: 1.5rem;
-    font-weight: var(--font-semibold);
+    font-weight: 700;
 }
 
 h6 {
     @apply leading-none text-primary;
     font-size: 1.125rem;
-    font-weight: var(--font-semibold);
+    font-weight: 700;
 }
 
 /* Rich text editor content */
@@ -118,5 +114,9 @@ a {
 .label {
     @apply uppercase pb-4 text-secondary;
     font-size: var(--body-14);
-    font-weight: var(--font-bold);
+    font-weight: 600;
+}
+
+.current a{
+    @apply text-secondary;
 }
