Header component added

--- a/Views/AboutPage.cshtml
+++ b/Views/AboutPage.cshtml
@@ -3,5 +3,6 @@
 @{
 	Layout = "MainLayout.cshtml";
 }
+<partial name="partials/Layout/_PageHeader" model="(IPageHeader)Model" />
 
 @Html.GetBlockListHtml(Model.Sections)
