--- a/Views/ContactPage.cshtml
+++ b/Views/ContactPage.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Umbraco.Cms.Web.Common.PublishedModels;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContactPage>
 @{
-	Layout = "MainLayout.cshtml";
+	Layout = "mainLayout.cshtml";
 }
+<partial name="partials/Layout/_PageHeader" model="(IPageHeader)Model" />
 
-<h1>Contact Us</h1>
