--- a/wwwroot/css/input.css
+++ b/wwwroot/css/input.css
@@ -113,7 +113,7 @@ a {
 ------------------------------------ */
 .label {
     @apply uppercase pb-4 text-secondary;
-    font-size: var(--body-14);
+    font-size: 14px;
     font-weight: 600;
 }
 
