--- a/wwwroot/css/output.css
+++ b/wwwroot/css/output.css
@@ -205,6 +205,24 @@
   .z-\[9999\] {
     z-index: 9999;
   }
+  .container {
+    width: 100%;
+    @media (width >= 40rem) {
+      max-width: 40rem;
+    }
+    @media (width >= 48rem) {
+      max-width: 48rem;
+    }
+    @media (width >= 64rem) {
+      max-width: 64rem;
+    }
+    @media (width >= 80rem) {
+      max-width: 80rem;
+    }
+    @media (width >= 96rem) {
+      max-width: 96rem;
+    }
+  }
   .-mx-2 {
     margin-inline: calc(var(--spacing) * -2);
   }
@@ -315,6 +333,15 @@
   .bg-primary {
     background-color: var(--color-primary);
   }
+  .bg-white-100 {
+    background-color: var(--color-white-100);
+  }
+  .\[background-position\:left_bottom\,top_right\] {
+    background-position: left bottom,top right;
+  }
+  .bg-no-repeat {
+    background-repeat: no-repeat;
+  }
   .object-cover {
     object-fit: cover;
   }
@@ -339,6 +366,9 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .py-16 {
+    padding-block: calc(var(--spacing) * 16);
+  }
   .py-\[4rem\] {
     padding-block: 4rem;
   }
@@ -350,6 +380,9 @@
   }
   .pb-5 {
     padding-bottom: calc(var(--spacing) * 5);
+  }
+  .text-center {
+    text-align: center;
   }
   .text-base {
     font-size: var(--text-base);
@@ -366,6 +399,9 @@
   .text-xs {
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
+  }
+  .text-\[2\.5rem\] {
+    font-size: 2.5rem;
   }
   .leading-none {
     --tw-leading: 1;
@@ -489,7 +525,7 @@ a {
   padding-bottom: calc(var(--spacing) * 4);
   color: var(--color-secondary);
   text-transform: uppercase;
-  font-size: var(--body-14);
+  font-size: 14px;
   font-weight: 600;
 }
 .current a {
