--- a/Views/Partials/Layout/_PageHeader.cshtml
+++ b/Views/Partials/Layout/_PageHeader.cshtml
@@ -1,5 +1,22 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<IPageHeader>
 
+@using Umbraco.Cms.Core.PublishedCache
+@using Umbraco.Cms.Core.Routing
+@using Umbraco.Cms.Core.Services.Navigation
+
+@inject IPublishedContentCache PublishedContentCache
+@inject IDocumentNavigationQueryService DocumentNavigationQueryService
+@inject IPublishedUrlProvider PublishedUrlProvider
+
+@{
+    var selection = Model.Ancestors().ToArray();
+    var homePageDisplayName = "Home";
+    var isFirstItem = true;
+}
+
+
+
+
 @* <section class="bg-white-100 bg-no-repeat py-16
 
         [background-image:url('/images/rectangle_left.svg'), url('/images/rectangle_right.svg');
@@ -11,8 +28,27 @@
 
     <div class="container mx-auto px-4"> 
         <h2 class="text-center text-[2.5rem] text-primary font-bold">@Model.PageTitle</h2>
-        <div>
 
+        <div class="flex justify-center gap-3 pt-3">
+
+            @if (selection?.Length > 0)
+            {
+                <ul class="flex items-center justify-center gap-2">
+                    @foreach (var item in selection.OrderBy(x => x.Level))
+                    {
+                        var displayName = isFirstItem ? homePageDisplayName : item.Name;
+                        <li class="flex items-center">
+                            <a class="text-sm text-primary hover:text-secondary" href="@item.Url(PublishedUrlProvider)">@displayName</a>
+                            <i class="fa-solid fa-angle-right ml-1 items-center justify-center text-[10px] leading-none text-primary"></i>
+                        </li>
+                        isFirstItem = false;
+                    }
+
+                    <li class="flex items-center">
+                        <p class="text-sm text-secondary">@Model.Name</p>
+                        </li>
+                </ul>
+            }
         </div>
     </div>
 </section>
