--- a/wwwroot/css/input.css
+++ b/wwwroot/css/input.css
@@ -86,7 +86,22 @@ h6 {
 .rte h3 {
     @apply mb-4 leading-snug text-primary;
 }
+.rte p {
+    @apply mb-3;
+}
+.rte-ul {
+    @apply list-disc pl-5 mt-3;
+}
+.rte-ul li{
+    @apply text-rte-xs text-body-text mb-3;
+}
 
+.rte-ul li::marker {
+    @apply text-secondary;
+}
+.rte img {
+    @apply w-full h-auto object-cover;
+}
 a {
     @apply no-underline;
 }
