--- a/wwwroot/css/output.css
+++ b/wwwroot/css/output.css
@@ -36,6 +36,11 @@
     --color-body-text: #535656;
     --color-body-text-100: #999999;
     --color-border-gray: #EAEAEA;
+    --text-rte-xl: 4.375rem;
+    --text-rte-lg: 2.5rem;
+    --text-rte-md: 1.25rem;
+    --text-rte-sm: 1rem;
+    --text-rte-xs: 0.875rem;
     --color-btn-primary-background-hover: #9EA6A3;
     --color-btn-primary-text-hover: #F2EDDC;
     --font-family-poppins: 'Poppins', sans-serif;
@@ -585,11 +590,32 @@ h6 {
 }
 .rte h3 {
   margin-bottom: calc(var(--spacing) * 4);
-  --tw-leading: var(--leading-snug);
-  line-height: var(--leading-snug);
+  --tw-leading: 1;
+  line-height: 1;
   color: var(--color-primary);
 }
-.rte-ul a {
+.rte p {
+  margin-bottom: calc(var(--spacing) * 3);
+}
+.rte-ul {
+  margin-top: calc(var(--spacing) * 3);
+  list-style-type: disc;
+  padding-left: calc(var(--spacing) * 5);
+}
+.rte-ul li {
+  margin-bottom: calc(var(--spacing) * 3);
+  font-size: var(--text-rte-xs);
+  color: var(--color-body-text);
+}
+.rte-ul li::marker {
+  color: var(--color-secondary);
+}
+.rte img {
+  height: auto;
+  width: 100%;
+  object-fit: cover;
+}
+a {
   text-decoration-line: none;
 }
 .btn {
