--- a/Views/mainLayout.cshtml
+++ b/Views/mainLayout.cshtml
@@ -8,7 +8,7 @@
 
     var siteSettings = rootContent.OfType<SiteSettings>().FirstOrDefault();
 
-    var siteName = siteSettings?.SiteName ?? "Onatrix";
+    var siteName = siteSettings?.SiteName?.ToString() ?? "Onatrix";
 
     var title = Model.Level == 1 ? $"{siteName}" : $"{siteName} | {Model.Name}";
 
