--- a/Views/Partials/blocklist/Components/AboutCallbackSection.cshtml
+++ b/Views/Partials/blocklist/Components/AboutCallbackSection.cshtml
@@ -19,7 +19,7 @@
 
         <div class="flex flex-col w-5/12 shadow-md -mt-[8rem] z-99">
             <div class="bg-primary">
-                <p class="text-white py-[1.5rem] px-[2rem] text-[1.875rem] font-bold">@content.AboutCallbackFormTitle</p>
+                <p class="text-white py-[1.5rem] px-[2rem] text-[1.875rem] font-bold">@content.FormTitle</p>
 
             </div>
 
