--- a/Views/Partials/Forms/_CallbackForm.cshtml
+++ b/Views/Partials/Forms/_CallbackForm.cshtml
@@ -6,20 +6,20 @@
 
         <div>
             <label asp-for="Name" class="sr-only"></label>
-            <input asp-for="Name" type="text" placeholder="@Html.DisplayNameFor(x => x.Name)" class="w-full p-3 italic border-2 border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none"/>
+            <input asp-for="Name" type="text" placeholder="@Html.DisplayNameFor(x => x.Name)" class="w-full p-3 italic border-1 border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none"/>
             <span asp-validation-for="Name"></span>
 
         </div>
 
           <div>
             <label asp-for="Email" class="sr-only"></label>
-            <input asp-for="Email" type="text" placeholder="@Html.DisplayNameFor(x => x.Email)" class="w-full p-3 italic border-2 border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none" />
+            <input asp-for="Email" type="text" placeholder="@Html.DisplayNameFor(x => x.Email)" class="w-full p-3 italic border-1 border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none" />
             <span asp-validation-for="Email"></span>
 
         </div>
         <div>
             <label asp-for="Phone" class="sr-only"></label>
-            <input asp-for="Phone" type="text" placeholder="@Html.DisplayNameFor(x => x.Phone)" class="w-full p-3 italic border-2 border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none" />
+            <input asp-for="Phone" type="text" placeholder="@Html.DisplayNameFor(x => x.Phone)" class="w-full p-3  italic border-1 border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none" />
             <span asp-validation-for="Phone"></span>
 
 
@@ -29,7 +29,7 @@
         <div >
             <label asp-for="SelectedOption" class="sr-only"></label>
             <div class="relative">
-                <select asp-for="SelectedOption" class="appearance-none w-full p-3 pr-10 border-2 border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none">
+                <select asp-for="SelectedOption" class="appearance-none w-full  p-3 pr-10 border-1 border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none">
                 <option value="" disabled hidden selected>Please select an option</option>
                     <option value="Financial consulting">Financial consulting</option>
                     <option value="Business">Business</option>
@@ -49,7 +49,7 @@
             <span asp-validation-for="SelectedOption"></span>
         </div>
         <div class="pb-[2.5rem]">
-            <button class="btn secondary-btn" type="submit">Submit</button>
+            <button class="btn secondary-btn w-full"  type="submit">Submit</button>
         </div>
 
     </div>
