form validation and scrolling fixed

--- a/Views/mainLayout.cshtml
+++ b/Views/mainLayout.cshtml
@@ -45,6 +45,9 @@
     <partial name="Partials/Layout/_Header" />
     @RenderBody()
     <partial name="Partials/Layout/_Footer" />
+
+    <script src="~/js/form.js"></script>
+
 </body>
 
 </html>
