--- a/Views/Partials/blocklist/Components/AboutCallbackSection.cshtml
+++ b/Views/Partials/blocklist/Components/AboutCallbackSection.cshtml
@@ -5,6 +5,10 @@
     var content = (ContentModels.AboutCallbackSection)Model.Content;
     var settings = Model.Settings as ContentModels.AboutCallbackSettings;
 
+    var formVM = new CallbackFormViewModel
+            {
+                Options = settings?.CallbackRequestOptions ?? []
+            };
 }
 
 <section class="py-[4rem]">
@@ -25,7 +29,22 @@
             </div>
 
             <p class="text-sm bg-neutral py-[1.5rem] px-[2rem] italic">@content.AboutCallbackFormDescription</p>
-            <partial name="Partials/Forms/_CallbackForm" model="new CallbackFormViewModel()"/>
+
+            <partial name="Partials/Forms/_CallbackForm" model="formVM"/>
+
+            @if(TempData["FormSuccess"] != null)
+            {
+                <div class="bg-green-50 text-green-700 p-4 mx-[2rem] mb-4 rounded-md">
+                    @TempData["FormSuccess"];
+                </div>
+            }
+            else if(TempData["FormError"] != null)
+            {
+                <div class="bg-red-50 text-red-700 p-4 mx-[2rem] mb-4 rounded-md">
+                    @TempData["FormError"];
+                </div>
+            }
+            
 
         </div>
     </div>
