swiper slider added

--- a/Views/Partials/blocklist/Components/ServiceSection.cshtml
+++ b/Views/Partials/blocklist/Components/ServiceSection.cshtml
@@ -24,27 +24,40 @@
             <div class="rte">@Html.Raw(content.ServiceTitle)</div>
         </div>
 
-        <div class="mt-5 grid grid-cols-3 gap-4">
+        @* <div class="mt-5 grid grid-cols-3 gap-4"> *@
 
             @if(items.Any())
             {
-                foreach(var item in items)
-                {
-                    <div class="bg-neutral border-2 border-white-100 w-full min-h-[350px] overflow-hidden transition-all hover:border-secondary hover:shadow-[0_4px_15px_rgba(0,0,0,0.1)]">
-                        <a href="@item.Url()" class="block">
-                            <h6 class="p-6 font-semibold">@item.Name</h6>
-                           
-                            <img src="@(item.ServiceDetailThumbnail?.Url() ?? "~/images/risk_management.svg")" class="block w-full h-[220px] object-cover" />
-                            <p class="text-sm p-[1.5rem]">@item.ServiceDetailExcerpt</p>
-                        </a>
+                <div class="swiper serviceSwiper !-mx-4 md:!mx-0">
+                    <div class="swiper-wrapper">
+                        @foreach(var item in items)
+                        {
+                        <div class="swiper-slide bg-neutral border-2 border-white-100 w-full min-h-[350px] overflow-hidden transition-all hover:border-secondary hover:shadow-[0_4px_15px_rgba(0,0,0,0.1)]">
+                            <a href="@item.Url()" class="block">
+                                <h6 class="p-6 font-semibold">@item.Name</h6>
+
+                                <img src="@(item.ServiceDetailThumbnail?.Url() ?? "~/images/risk_management.svg")" class="block w-full h-[220px] object-cover" />
+                                <p class="text-sm p-[1.5rem]">@item.ServiceDetailExcerpt</p>
+                            </a>
+                        </div>
+                        }
                     </div>
-                }
+
+                    <div class="custom-pagination">
+                        <div class="custom-prev">Prev</div>
+                        <div class="swiper-pagination"></div>
+                        <div class="custom-next">Next</div>
+                    </div>
+
+                </div>
+
+               
             }
             else
             {
                 <p>No services available</p>
             }
            
-        </div>
+        @* </div> *@
     </div>
 </section> 
