Add Partners Section block

--- a/Views/Partials/Layout/_Footer.cshtml
+++ b/Views/Partials/Layout/_Footer.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
 
-<footer class="bg-dark text-body-text py-2">
-    <div class="max-w-7xl mx-auto px-3 text-left text-sm">
+<footer class="bg-dark text-body-text py-3">
+    <div class="max-w-6xl mx-auto px-3 text-xs">
         © Onatrix. All Rights Reserved. Credits to <a class="text-secondary">Themesflat</a>
     </div>
   </footer>
