--- a/wwwroot/css/input.css
+++ b/wwwroot/css/input.css
@@ -62,7 +62,9 @@ body {
 a {
     @apply no-underline;
 }
-
+.mierda {
+    border: 1px solid red;
+}
 /* ------------------------------------
    Buttons
 ------------------------------------ */
